# gutenburg_epubs

./: .coverage  .gitignore  .pre-commit-config.yaml  BULK_DOWNLOAD_INSTRUCTIONS.md  CHANGELOG.md  CLI_USAGE.md  CONTRIBUTING.md  DATABASE_IMPLEMENTATION.md  DOWNLOAD_SUCCESS.md  DOWNLOAD_SUMMARY.md  FINAL_REPORT.md  LICENSE  PROJECT_STATUS.md  README.md  REPOSITORY_GUIDE.md  RUFF_MIGRATION.md  benchmark_runner.py  bulk_download.py  debug_formats.py  debug_scraper.py  debug_search.py  debug_subject.py  direct_download.py  download_scifi.py  download_scifi_mirrors.py  filter_cli_test.py  final_validation_report.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_discovery_first.py  test_alias.py  test_connectivity.py  test_download.py  test_fixes.py  test_gutenberg_cli.py  test_import.csv  test_mirror_fixes.py  test_mirror_rotation.py  update_cli_tests.py  (+2 more)
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml
.llmconfig/: CLAUDE.md  CONFIG_ORGANIZATION.md  PROJECT_PLAN.md  agent-rules.md
.llmconfig/context/: code_standards.md
.llmconfig/examples/: good_module.py  good_test.py
.llmconfig/prompt-templates/: code_generation.md  test_generation.md
.llmconfig/system-prompts/: code_assistant.md
examples/: benchmark_results.md  config.toml  config.yaml
src/gutenberg_downloader/: __init__.py  __main__.py  api_client.py  api_discovery.py  api_discovery_db.py  async_api_client.py  async_api_discovery.py  async_discovery.py  async_epub_downloader.py  benchmark.py  cache.py  catalog_importer.py  cli.py  config.py  constants.py  database.py  discovery.py  download_queue.py  enhanced_cli.py  enhanced_downloader.py  epub_downloader.py  exporter.py  logger.py  migrations.py  mirror_manager.py  scraper.py  signal_handler.py  smart_downloader.py  tui.py
tests/: __init__.py  test_api_client.py  test_async_discovery.py  test_async_epub_downloader.py  test_cache.py  test_cli.py  test_database.py  test_discovery.py  test_epub_downloader.py  test_logger.py  test_mirror_manager.py  test_scraper.py  test_tui.py
