[project]
name = "gutenberg-downloader"
version = "0.1.0"
description = "A tool to download EPUB files from Project Gutenberg"
readme = "README.md"
authors = [
    { name = "William Zujkowski", email = "williamzujkowski@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "tqdm>=4.65",
    "robotexclusionrulesparser>=1.6",
    "tenacity>=8.2",
    "aiofiles>=23.1",
    "uvloop>=0.17;platform_system!='Windows'",
]

[project.scripts]
gutenberg-downloader = "gutenberg_downloader.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.22",
    "mypy>=1.3",
    "black>=23.3",
    "flake8>=6.0",
    "isort>=5.12",
    "pre-commit>=3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/gutenberg_downloader --cov-report=html --cov-report=term"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/gutenberg_downloader"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
