[project]
name = "gutenberg-downloader"
version = "0.1.0"
description = "A tool to download EPUB files from Project Gutenberg"
readme = "README.md"
authors = [
    { name = "William Zujkowski", email = "william.zujkowski@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "tqdm>=4.65",
    "robotexclusionrulesparser>=1.6",
    "tenacity>=8.2",
    "aiofiles>=23.1",
    "uvloop>=0.17;platform_system!='Windows'",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "textual>=0.40",
    "rich>=13.0",
    "toml>=0.10",
    "pyyaml>=6.0",
]

[project.scripts]
gutenberg-downloader = "gutenberg_downloader.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.22",
    "mypy>=1.3",
    "ruff>=0.1.0",
    "pre-commit>=3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Same line length as Black
line-length = 88

# Assume Python 3.9
target-version = "py39"

# Exclude a variety of commonly ignored directories
exclude = [
    ".git",
    ".mypy_cache", 
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".llmconfig/examples",  # Skip example files with syntax issues
]

[tool.ruff.lint]
# Enable Pyflakes (`F`), pycodestyle (`E`, `W`), isort (`I`), and more
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings  
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["gutenberg_downloader"]

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

# Less strict settings for tests
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_any_explicit = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/gutenberg_downloader --cov-report=html --cov-report=term"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/gutenberg_downloader"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
